# imgclip

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/: issue-ai.yml
.github/workflows/: ci.yml  issue-ai.yml  release.yml
docs/demo/: demo.html  demo.tape  record.js
src/: cli.rs  clipboard.rs  convert.rs  daemon.rs  error.rs  interactive.rs  main.rs  output.rs  watch.rs
